--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,4 +1,20 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "main/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/python",
+      "config": {
+        "runtime": "python3.9",
+        "distDir": "staticfiles"
+      }
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
