--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,9 +8,10 @@
     },
     {
       "src": "build_files.sh",
-      "use": "@vercel/python",
+      "use": "@vercel/static-build",
       "config": {
-        "distDir": "staticfiles"
+        "distDir": "staticfiles",
+        "runtime": "python3.9"
       }
     }
   ],
